feat: Implemented CategoryMvcController

--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -81,7 +81,9 @@ body {
 }
 
 .contest-create-view .invalid-feedback,
-.contest-update-view .invalid-feedback {
+.contest-update-view .invalid-feedback,
+.category-create-view .invalid-feedback,
+.category-update-view .invalid-feedback  {
     color: #ffc107 !important;
 }
 
