--- a/src/main/resources/templates/UserView.html
+++ b/src/main/resources/templates/UserView.html
@@ -54,6 +54,102 @@
       </div>
     </div>
   </div>
+  <div class="row justify-content-center mt-2 mb-5">
+    <div class="col-lg-10">
+      <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="active-contests-tab" data-bs-toggle="tab" data-bs-target="#active-contests-tab-pane"
+                  type="button" role="tab" aria-controls="active-contests-tab-pane" aria-selected="true">Active Contests
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="finished-contests-tab" data-bs-toggle="tab" data-bs-target="#finished-contests-tab-pane"
+                  type="button" role="tab" aria-controls="finished-contests-tab-pane" aria-selected="false">Finished Contests
+          </button>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="active-contests-tab-pane" role="tabpanel" aria-labelledby="active-contests-tab"
+             tabindex="0">
+          <div class="list-group w-auto mt-1">
+            <th:block th:if="${user.activeContests.isEmpty()}">
+              <div class="d-flex gap-2 w-100 justify-content-center">
+                <div>
+                  <h6 class="mb-0 display-6">No Active Contests</h6>
+                </div>
+              </div>
+            </th:block>
+            <th:block th:each="contest : ${user.activeContests}">
+              <a href="#" th:href="@{/contests/{id}(id=${contest.id})}"
+                 class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                <img class="img-thumbnail rounded" th:if="${contest.coverPhoto != null}"
+                     style="width: 10%" th:src="${contest.coverPhoto}" th:alt="${'cover photo'}"
+                     alt="cover photo" src="/">
+                <img class="img-thumbnail rounded"
+                     th:if="${contest.coverPhoto == null}" th:src="@{/images/1156px-Picture_icon_BLACK.svg.png}"
+                     th:alt="${'cover photo'}" alt="cover photo" src="../static/images/1156px-Picture_icon_BLACK.svg.png"
+                     style="width: 10%">
+                <div class="d-flex gap-2 w-100 justify-content-between">
+                  <div>
+                    <h6 class="mb-0" th:text="${contest.title}">Title (design!)</h6>
+                      <span class="mb-0 opacity-75"
+                         th:text="${contest.category.name}">
+                      Body (design!)</span>
+                  </div>
+                </div>
+                <div>
+                  <span>
+                    <i class="bi bi-people"></i>
+                    <span th:text="${contest.participants.size()}"></span>
+                  </span>
+                </div>
+              </a>
+            </th:block>
+          </div>
+        </div>
+
+        <div class="tab-pane fade" id="finished-contests-tab-pane" role="tabpanel" aria-labelledby="finished-contests-tab"
+             tabindex="0">
+          <div class="list-group w-auto mt-1">
+            <th:block th:if="${user.finishedContests.isEmpty()}">
+              <div class="d-flex gap-2 w-100 justify-content-center">
+                <div>
+                  <h6 class="mb-0 display-6">No Finished Contests</h6>
+                </div>
+              </div>
+            </th:block>
+            <th:block th:each="contest : ${user.finishedContests}">
+              <a href="#" th:href="@{/contests/{id}(id=${contest.id})}"
+                 class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                <img class="img-thumbnail rounded" th:if="${contest.coverPhoto != null}"
+                     style="width: 10%" th:src="${contest.coverPhoto}" th:alt="${'cover photo'}"
+                     alt="cover photo" src="/">
+                <img class="img-thumbnail rounded"
+                     th:if="${contest.coverPhoto == null}" th:src="@{/images/1156px-Picture_icon_BLACK.svg.png}"
+                     th:alt="${'cover photo'}" alt="cover photo" src="../static/images/1156px-Picture_icon_BLACK.svg.png"
+                     style="width: 10%">
+                <div class="d-flex gap-2 w-100 justify-content-between">
+                  <div>
+                    <h6 class="mb-0" th:text="${contest.title}">Title (design!)</h6>
+                    <span class="mb-0 opacity-75"
+                          th:text="${contest.category.name}">
+                      Body (design!)</span>
+                  </div>
+                </div>
+                <div>
+                  <span>
+                    <i class="bi bi-people"></i>
+                    <span th:text="${contest.participants.size()}"></span>
+                  </span>
+                </div>
+              </a>
+            </th:block>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
 
 <!-- Delete Modal -->
