--- a/src/main/resources/templates/PhotoCreateView.html
+++ b/src/main/resources/templates/PhotoCreateView.html
@@ -8,8 +8,17 @@
 <body class="user-view d-flex flex-column min-vh-100">
 <header th:replace="~{fragments/navbar :: header(context='photo-create')}"></header>
 
-<div class="container mt-5 mb-4">
-  <form th:replace="~{fragments/photo-form-new :: photo-form-new(context='create')}"></form>
+<div class="container mt-3">
+  <div class="text-center overflow-hidden mb-5">
+    <div class="my-3">
+      <h2 class="display-4">Create Photo</h2>
+    </div>
+    <div class="bg-dark shadow-sm mx-auto rounded">
+      <div class="w-75 p-3 mx-auto">
+        <form th:replace="~{fragments/photo-form-new :: photo-form-new(context='create')}"></form>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div th:replace="~{fragments/footer :: footer}"></div>
