--- a/src/main/resources/templates/UserView.html
+++ b/src/main/resources/templates/UserView.html
@@ -23,8 +23,8 @@
              th:classappend="${user.isOrganizer()} ? 'text-white bg-success' : 'text-dark bg-light text-dark bg-light'">
           <h4 th:text="${user.username.toUpperCase()}">User Profile</h4>
         </div>
-        <div class="card-body d-flex align-items-center">
-          <div class="col-lg-10 col-md-8 col-sm-10">
+        <div class="card-body d-flex align-items-center flex-wrap">
+          <div class="col-lg-10 col-md-8 col-sm-10" style="width: 50%">
             <div class="form-group d-flex align-items-center mb-3">
               <i class="bi bi-person-fill me-2"></i>
               <span th:text="${user.firstName} + ' ' + (${user.getLastName()})">Full Name</span>
@@ -38,23 +38,38 @@
               <span th:if="${!user.isOrganizer}" th:text="${user.rank.name}">Rank</span>
               <span th:if="${user.isOrganizer}" th:text="#{user.organizer}">Rank</span>
             </div>
+            <div class="form-group d-flex align-items-center mb-3" th:if="${!user.isOrganizer}">
+              <h6 class="fw-bold" th:text="${user.points + ' Points'}">45</h6>
+            </div>
+          </div>
+          <div class="col-lg-10 col-md-8 col-sm-10" style="width: 50%">
+            <div class="form-group d-flex align-items-center mb-3">
+              <div th:if="${!user.isOrganizer && user.rank.name != 'Wise and Benevolent Photo Dictator'}">
+                <span>Points till next rank:
+                <span th:if="${user.rank.name == 'Junkie'}" th:text="${50 - user.points}">35</span>
+                <span th:if="${user.rank.name == 'Enthusiast'}" th:text="${150 - user.points}">75</span>
+                <span th:if="${user.rank.name == 'Master'}" th:text="${1000 - user.points}">75</span>
+                </span>
+              </div>
+            </div>
           </div>
         </div>
+
         <div th:if="${session.isAuthenticated && (session.user.isOrganizer() || session.currentUser == user.username)}"
              class="card-footer text-center text-dark bg-light">
           <a th:if="${session.user.isOrganizer()}" href="#" class="btn btn-success" th:href="@{${permissionPath}}"><i
                   class="bi bi-toggles" title="Update permissions"></i></a>
+          <a href="#" class="btn btn-warning" th:if="${user.isOrganizer}" th:href="@{/users}">All Users</a>
+          <a href="#" class="btn btn-warning" th:if="${user.isOrganizer}" th:href="@{/users/photojunkies}">Photo Junkies</a>
           <a href="#" class="btn btn-warning" th:href="@{${updatePath}}"><i class="bi bi-person-lines-fill"
                                                                             title="Update settings"></i></a>
           <a href="#" data-bs-toggle="modal" data-bs-target="#deleteModal" class="btn btn-danger"><i
                   class="bi bi-person-fill-slash" title="Delete account"></i></a>
-          <a th:if="${userMatch}" href="#" class="btn btn-success" th:href="@{/auth/logout}">
-            Logout</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="row justify-content-center mt-2 mb-5">
+  <div th:if="${userMatch}" class="row justify-content-center mt-2 mb-5">
     <div class="col-lg-10">
       <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
