--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,46 @@
 
 <body class="main-view d-flex flex-column min-vh-100">
     <header th:replace="~{fragments/navbar :: header(context='home')}"></header>
-    <main>
+    <main class="container mx-auto my-5">
+        <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
+
+
+            <div class="col px-0">
+                <h1 class="display-4 fst-italic text-warning">Welcome to Photo Contest website</h1>
+                <p class="lead mt-3 text-warning">
+                    Welcome to our photo contest website! To participate in our contest, you can submit your best photos.
+                    Make sure to upload high-quality photos and include a brief description of each photo.
+                    Winners will be selected based on creativity, originality, and adherence to the contest theme. Good luck!
+                    <br> Check out our latest winners down below <i class="bi bi-arrow-down"></i>
+                </p>
+            </div>
+        </div>
+        <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div th:each="contest, contestIndex : ${contests}" th:if="${contest.winners != null and !contest.winners.isEmpty()}">
+                        <div th:classappend="${contestIndex.index == 0} ? 'carousel-item active' : 'carousel-item'" data-bs-interval="3000">
+                            <img src="#" th:src="${contest.winners[0].get('photo')}" class="d-block mx-auto w-75" alt="Winner of the contest" />
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-warning" th:text="${contest.winners[0].get('userCreated')}">User (design)</h5>
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-warning">Score</button>
+                                    <button type="button" class="btn btn-outline-warning" th:text="${contest.winners[0].get('totalScore')}">Score (design)</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="text-warning" aria-hidden="true"><i class="bi bi-caret-left-fill" style="font-size: 2rem;"></i></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="text-warning" aria-hidden="true"><i class="bi bi-caret-right-fill" style="font-size: 2rem;"></i></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
 
     </main>
     <div th:replace="~{fragments/footer :: footer}"></div>
