fix: Fixed issue with jury adding

--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -93,7 +93,9 @@ body {
 .contest-create-view .invalid-feedback,
 .contest-update-view .invalid-feedback,
 .category-create-view .invalid-feedback,
-.category-update-view .invalid-feedback  {
+.category-update-view .invalid-feedback,
+.create-photo-view .invalid-feedback,
+.rate-view .invalid-feedback {
     color: #ffc107 !important;
 }
 
