--- a/src/main/resources/templates/CreateReviewView.html
+++ b/src/main/resources/templates/CreateReviewView.html
@@ -5,7 +5,7 @@
   <title th:text="#{page.review}">Photo Contest</title>
   <th:block th:replace="~{fragments/head :: head}"></th:block>
 </head>
-<body class="register-view d-flex flex-column min-vh-100">
+<body class="rate-view d-flex flex-column min-vh-100">
 <header th:replace="~{fragments/navbar :: header(context='create-photo-review')}"></header>
 <div class="container mt-3">
   <div class="text-center overflow-hidden mb-5">
