--- a/src/main/resources/templates/PhotoCreateView.html
+++ b/src/main/resources/templates/PhotoCreateView.html
@@ -5,7 +5,7 @@
   <title>Create Photo</title>
   <th:block th:replace="~{fragments/head :: head}"></th:block>
 </head>
-<body class="user-view d-flex flex-column min-vh-100">
+<body class="create-photo-view d-flex flex-column min-vh-100">
 <header th:replace="~{fragments/navbar :: header(context='photo-create')}"></header>
 
 <div class="container mt-3">
