add new script: textarea-expand small change in PhotoReviewDto

--- a/src/main/resources/templates/PhotoCreateView.html
+++ b/src/main/resources/templates/PhotoCreateView.html
@@ -23,5 +23,6 @@
 
 <div th:replace="~{fragments/footer :: footer}"></div>
 <script th:replace="~{fragments/scripts :: bootstrap}"></script>
+<script th:replace="~{fragments/scripts :: textarea-expand}"></script>
 </body>
 </html>
