--- a/src/main/resources/templates/CreateReviewView.html
+++ b/src/main/resources/templates/CreateReviewView.html
@@ -21,5 +21,6 @@
 </div>
 <div th:replace="~{fragments/footer :: footer}"></div>
 <script th:replace="~{fragments/scripts :: bootstrap}"></script>
+<script th:replace="~{fragments/scripts :: textarea-expand}"></script>
 </body>
 </html>
